# matrix-lang

./: .gitignore  README.md  compile_full.sh  compiler.py  pyproject.toml  simple_print  simple_print.ll  simple_print.s  simple_test  simple_test.ll  simple_test.mlir  simple_test.s  test_output  test_output.ll  test_output.mlir  test_output.s
examples/: complex1.mx  double_transpose.mx  example.mx  multi_func.mx  multi_func2.mx  multi_func3.mx  scalar_test.mx  simple.mx  simple_const.mx  simple_matmul.mx  simple_print.mx  transpose_test.mx
matrix_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
runtime/: matrix_runtime.c
src/: __init__.py  dialect.py  ir_generator.py  middle_end.py  parser.py  standard_lowering.py
